--- a/.github/workflows/checkPHP.yml
+++ b/.github/workflows/checkPHP.yml
@@ -3,10 +3,10 @@ name: checkPHP
 on:
   push:
     branches:
-      - dev
+      - beta
   pull_request:
     branches:
-      - dev
+      - beta
 
 jobs:
   build:
