--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,78 @@
 {
     "cSpell.words": [
         "addressip",
+        "armv",
+        "asuswrt",
+        "boottime",
+        "buffcache",
+        "buildnumber",
+        "cartereseau",
+        "cartereseauautre",
+        "colorhigh",
+        "colorlow",
+        "coretemp",
+        "cpufreq",
+        "Cubie",
+        "dataresult",
+        "debian",
+        "dependancy",
+        "depinstall",
         "deporte",
+        "distri",
+        "ELEC",
+        "equipement",
         "Equipement",
+        "Formated",
+        "getconf",
+        "getconfiguration",
+        "gsub",
+        "hddesata",
+        "hddusb",
+        "hddv",
+        "Historized",
+        "hwmon",
+        "iface",
+        "loadavg",
+        "Localor",
+        "localorremote",
         "localoudistant",
         "maitreesclave",
+        "medion",
+        "mips",
+        "mmcblk",
+        "Monitoringcli",
+        "ncpu",
+        "netauto",
+        "netautre",
+        "Odroid",
+        "paramaction",
+        "PCPVERS",
+        "pcpversion",
+        "physmem",
         "portssh",
+        "POSTSAVE",
+        "poweroffcmd",
+        "productversion",
+        "PULLCUSTOM",
+        "PULLLOCAL",
+        "Rafraichir",
+        "rebootcmd",
+        "RXTX",
+        "Ryzen",
+        "smallfixnumber",
+        "SSHM",
         "sshmanager",
-        "timeoutssh"
+        "sunxi",
+        "swapinfo",
+        "syno",
+        "synoinfo",
+        "synologyesata",
+        "synologyusb",
+        "synologyv",
+        "timeoutsrv",
+        "timeoutssh",
+        "txrx",
+        "upnpmodelname",
+        "Wyse"
     ]
 }
