Add QNAP and AsusWRT in config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "synologyesata",
         "synologyusb",
         "synologyv",
+        "temppath",
         "Thresholdd",
         "timeoutsrv",
         "timeoutssh",
