update QNAP code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "boottime",
         "buffcache",
         "buildnumber",
+        "CACHEDEV",
         "cartereseau",
         "cartereseauautre",
         "colorhigh",
