--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "Equipement",
         "Etat",
         "Formated",
+        "getcfg",
         "getconf",
         "getconfiguration",
         "getsysinfo",
