update AsusWRT commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "asuswrt",
         "boottime",
         "buffcache",
+        "buildno",
         "buildnumber",
         "CACHEDEV",
         "cartereseau",
@@ -28,6 +29,7 @@
         "equipement",
         "Equipement",
         "Etat",
+        "firmver",
         "Formated",
         "getcfg",
         "getconf",
@@ -52,6 +54,7 @@
         "ncpu",
         "netauto",
         "netautre",
+        "nvram",
         "Odroid",
         "paramaction",
         "PCPVERS",
@@ -60,6 +63,7 @@
         "portssh",
         "POSTSAVE",
         "poweroffcmd",
+        "productid",
         "productversion",
         "PULLCUSTOM",
         "PULLLOCAL",
