update AsusWRT commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "Historized",
         "hwmon",
         "iface",
+        "ifname",
         "loadavg",
         "Localor",
         "localorremote",
