update AsusWRT commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "hwmon",
         "iface",
         "ifname",
+        "jffs",
         "loadavg",
         "Localor",
         "localorremote",
