--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "CACHEDEV",
         "cartereseau",
         "cartereseauautre",
+        "clientlist",
         "colorhigh",
         "colorlow",
         "commandtab",
@@ -23,6 +24,7 @@
         "depinstall",
         "deporte",
         "distri",
+        "dnsmasq",
         "ELEC",
         "Eqlogic",
         "eqlogictab",
