Update Asus template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,8 @@
         "mips",
         "mmcblk",
         "Monitoringcli",
+        "Namedashboard",
+        "Namemobile",
         "ncpu",
         "netauto",
         "netautre",
