--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,7 @@
         "synologyusb",
         "synologyv",
         "temppath",
+        "tempsense",
         "Thresholdd",
         "timeoutsrv",
         "timeoutssh",
