update asuswrt commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "hwmon",
         "iface",
         "ifname",
+        "ifnames",
         "jffs",
         "loadavg",
         "Localor",
@@ -74,6 +75,7 @@
         "PULLCUSTOM",
         "PULLLOCAL",
         "Rafraichir",
+        "realip",
         "rebootcmd",
         "RXTX",
         "Ryzen",
