--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "CACHEDEV",
         "cartereseau",
         "cartereseauautre",
+        "cartesreseau",
         "clientlist",
         "colorhigh",
         "colorlow",
