--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "Etat",
         "firmver",
         "Formated",
+        "freebsd",
         "getcfg",
         "getconf",
         "getconfiguration",
