--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "iface",
         "ifname",
         "ifnames",
+        "isset",
         "jffs",
         "loadavg",
         "Localor",
@@ -68,6 +69,7 @@
         "paramaction",
         "PCPVERS",
         "pcpversion",
+        "phpunit",
         "physmem",
         "portssh",
         "POSTSAVE",
