--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "deporte",
         "distri",
         "dnsmasq",
+        "ehthumbs",
         "ELEC",
         "Eqlogic",
         "eqlogictab",
@@ -44,6 +45,7 @@
         "hddusb",
         "hddv",
         "Historized",
+        "htmlstate",
         "hwmon",
         "iface",
         "ifname",
