rewrite dashboard template Monitoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "eqlogictab",
         "equipement",
         "Equipement",
+        "esata",
         "Etat",
         "firmver",
         "Formated",
