--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
         "timeoutssh",
         "totalsize",
         "txrx",
+        "unconfigured",
         "upnpmodelname",
         "virt",
         "wlan",
