update cspell config

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # IDE & Editors
 .vscode/*
-!.vscode/settings.json
 !.vscode/extensions.json
+!.vscode/cspell.json
 
 # OS Generated Files
 # Windows
