--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,113 +1,10 @@
 {
-    "cSpell.words": [
-        "addressip",
-        "ajax",
-        "armv",
-        "asus",
-        "asuswrt",
-        "boottime",
-        "buffcache",
-        "buildno",
-        "buildnumber",
-        "CACHEDEV",
-        "cartereseau",
-        "cartereseauautre",
-        "cartesreseau",
-        "clientlist",
-        "colorhigh",
-        "colorlow",
-        "commandtab",
-        "coretemp",
-        "cpufreq",
-        "Cubie",
-        "dataresult",
-        "debian",
-        "dependancy",
-        "depinstall",
-        "deporte",
-        "distri",
-        "dnsmasq",
-        "ehthumbs",
-        "ELEC",
-        "Eqlogic",
-        "eqlogictab",
-        "equipement",
-        "Equipement",
-        "esata",
-        "Etat",
-        "firmver",
-        "Formated",
-        "freebsd",
-        "getcfg",
-        "getconf",
-        "getconfiguration",
-        "getsysinfo",
-        "gsub",
-        "hddesata",
-        "hddusb",
-        "hddv",
-        "Historized",
-        "htmlstate",
-        "hwmon",
-        "iface",
-        "ifname",
-        "ifnames",
-        "isset",
-        "jffs",
-        "loadavg",
-        "Localor",
-        "localorremote",
-        "localoudistant",
-        "maitreesclave",
-        "medion",
-        "mips",
-        "mmcblk",
-        "Monitoringcli",
-        "Namedashboard",
-        "Namemobile",
-        "ncpu",
-        "netauto",
-        "netautre",
-        "nvram",
-        "Odroid",
-        "paramaction",
-        "PCPVERS",
-        "pcpversion",
-        "phpunit",
-        "physmem",
-        "portssh",
-        "POSTSAVE",
-        "poweroffcmd",
-        "productid",
-        "productversion",
-        "PULLCUSTOM",
-        "PULLLOCAL",
-        "Rafraichir",
-        "realip",
-        "rebootcmd",
-        "RXTX",
-        "Ryzen",
-        "smallfixnumber",
-        "SSHM",
-        "sshmanager",
-        "sunxi",
-        "swapinfo",
-        "syno",
-        "synoinfo",
-        "synologyesata",
-        "synologyusb",
-        "synologyv",
-        "temppath",
-        "tempsense",
-        "Thresholdd",
-        "timeoutsrv",
-        "timeoutssh",
-        "totalsize",
-        "txrx",
-        "unconfigured",
-        "upnpmodelname",
-        "virt",
-        "wlan",
-        "Wyse"
-    ]
+    "cSpell.customDictionaries": {
+        "project-words": {
+            "name": "project-words",
+            "path": "${workspaceRoot}/.vscode/cspell.json",
+            "addWords": true,
+            "scope": "folder"
+        }
+    }
 }
